--- a/index.html
+++ b/index.html
@@ -11,8 +11,56 @@
 <body>
 
   <div class="container">
+
     <div class="row">
-      
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1">
+        <div class="box">1-col</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-lg-2">
+        <div class="box">col</div>
+      </div>
+      <div class="col-xs-12 col-lg-5">
+        <div class="box">col</div>
+      </div>
+      <div class="col-xs-12 col-lg-5">
+        <div class="box">col</div>
+      </div>
     </div>
 
 
