--- a/index.html
+++ b/index.html
@@ -52,15 +52,18 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12 col-lg-2">
+      <div class="col-xs-12 col-sm-8 col-md-4 col-lg-2">
         <div class="box">col</div>
       </div>
-      <div class="col-xs-12 col-lg-5">
+      <div class="col-xs-12 col-sm-2 col-md-4 col-lg-5">
         <div class="box">col</div>
       </div>
-      <div class="col-xs-12 col-lg-5">
+      <div class="col-xs-12 col-sm-2 col-md-4 col-lg-5">
         <div class="box">col</div>
       </div>
+
+
+
     </div>
 
 
