--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
       <div class="col-xs-12 col-sm-2 col-md-4 col-lg-5">
         <div class="box">col</div>
       </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-12 col-lg-offset-0">
+        <div class="box">12 col</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="box">8 col</div>
+      </div>
+      <div class="col-lg-2">
+        <div class="box">2 col</div>
+      </div>
+      <div class="col-lg-2">
+        <div class="box">2 col</div>
+      </div>
 
 
 
