--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-8 col-md-4 col-sm-2 col-xs-12">
         <div class="box">8 col</div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-4 col-sm-2 col-xs-12">
         <div class="box">2 col</div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-4 col-sm-8 col-xs-12">
         <div class="box">2 col</div>
       </div>
 
