--- a/index.html
+++ b/index.html
@@ -70,18 +70,96 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-8 col-md-4 col-sm-2 col-xs-12">
+      <div class="col-xs-12 col-sm-2 col-md-4 col-lg-8">
         <div class="box">8 col</div>
       </div>
-      <div class="col-lg-2 col-md-4 col-sm-2 col-xs-12">
+      <div class="col-xs-12 col-sm-2 col-md-4 col-lg-2 ">
         <div class="box">2 col</div>
       </div>
-      <div class="col-lg-2 col-md-4 col-sm-8 col-xs-12">
+      <div class="col-xs-12 col-sm-8 col-md-4 col-lg-2">
         <div class="box">2 col</div>
       </div>
+    </div>
 
+    <div class="row">
+      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-1">
+        <div class="box">1 col</div>
+      </div>
+      <div class="col-xs-12 col-sm-2 col-md-1 col-lg-2">
+        <div class="box">2 col</div>
+      </div>
+      <div class="col-xs-12 col-sm-2 col-md-1 col-lg-2">
+        <div class="box">2 col</div>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
+        <div class="box">6 col</div>
+      </div>
+      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-1">
+        <div class="box">1 col</div>
+      </div>
+    </div>
 
+    <div class="row row-margin">
+      <div class="col-xs-12 col-lg-6">
+        <div class="box">
+          <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-4 col-lg-2">
+              <div class="box-blue">col2</div>
+            </div>
+            <div class="col-xs-12 col-sm-2 col-md-4 col-lg-2">
+              <div class="box-blue">col2</div>
+            </div>
+            <div class="col-xs-12 col-sm-2 col-md-4 col-lg-8">
+              <div class="box-blue">col8</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-lg-6">
+        <div class="box">
+          <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-4 col-lg-6">
+              <div class="box-blue">col6</div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-8 col-lg-6">
+              <div class="box-blue">col6</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-12">
+        <div class="box">col</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-4 col-md-2 col-lg-1">
+        <div class="box">col</div>
+      </div>
+      <div class="col-xs-12 col-sm-8 col-md-10 col-lg-11">
+        <div class="box">col</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-md-4 col-lg-2">
+        <div class="box">col</div>
+      </div>
+      <div class="col-xs-12 col-sm-2 col-md-8 col-lg-10">
+        <div class="box">col</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-2 col-md-6 col-lg-3">
+        <div class="box">col</div>
+      </div>
+      <div class="col-xs-12 col-sm-10 col-md-6 col-lg-9">
+        <div class="box">col</div>
+      </div>
     </div>
 
 
